multi_doc/src/snapshots/multi_doc__test__empty_doc_preserve_src.snap
---
source: multi_doc/src/lib.rs
expression: doc

---
MultiDoc {
    items: [
        SingleDoc {
            line_start: 8,
            line_end: 10,
            content: "\nname: \"kittie\"",
        },
    ],
}
