multi_doc/src/snapshots/multi_doc__test__single_doc_with_prefix_padding.snap
---
source: multi_doc/src/lib.rs
expression: srcs

---
MultiDoc {
    items: [
        SingleDoc {
            line_start: 3,
            line_end: 10,
            content: "kind: Topic\nname: Run screen shot tests\ndeps:\n  - global-node\n  - global-yarn\nsteps:\n  - github-checkin",
        },
    ],
}
